--- a/voluntarios.html
+++ b/voluntarios.html
@@ -107,7 +107,7 @@
                         <h2 class="mb-lg-0 text-yellow-dark-custom">VOLUNTARIOS 2024</h2>
                     </div>
                     <div class="col-3">
-                        <a ><img src="./images/voluntarios.jpg" style="width:100%; height: auto" /></a>
+                        <a><img src="./images/voluntarios.jpg" style="width:100%; height: auto" /></a>
                         <div class="col-12">
                             <a class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">Quiero ser CALIFA</a>
                         </div>
@@ -226,42 +226,44 @@
                 </div>
                 <div class="row">
                     <div class="col-3">
-                        <div class="col-3">
-                            <a href="https://saile.es/" target="_blank"><img src="./images/saile-logo-blanco.png" style="width:100%; height: auto" /></a>
-                        </div>
-                        <div class="col-3">
-                            <a href="https://iberoturf.com/" target="_blank"><img src="./images/iberoturf-logo-blanco.png" style="width:100%; height: auto" /></a>
-                        </div>
+                        <a href="https://saile.es/" target="_blank"><img src="./images/saile-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://iberoturf.com/" target="_blank"><img src="./images/iberoturf-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
                         <a href="https://www.mercadovictoria.com/" target="_blank"><img src="./images/mercadovictoria-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.ptvtelecom.com/" target="_blank"><img src="./images/PTV_blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-3">
                         <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="container blue-custom-bg">
-            <div class="row">
-                <div class="col-12">
-                    <ul class="site-footer-links">
-                        <li class="site-footer-link-item">
-                            <a href="#" class="site-footer-link">Aviso Legal</a>
-                        </li>
-                    </ul>
+            <div class="container blue-custom-bg">
+                <div class="row">
+                    <div class="col-12">
+                        <ul class="site-footer-links">
+                            <li class="site-footer-link-item">
+                                <a href="#" class="site-footer-link">Aviso Legal</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-12">
+                        <ul class="site-footer-links">
+                            <li class="site-footer-link-item">
+                                <a href="#" class="site-footer-link">Política de Privacidad</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-12">
-                    <ul class="site-footer-links">
-                        <li class="site-footer-link-item">
-                            <a href="#" class="site-footer-link">Política de Privacidad</a>
-                        </li>
-                    </ul>
+                <div>
+                    <p class="copyright-text">Copyright © Califa Mountain Festival</p>
                 </div>
             </div>
-            <div>
-                <p class="copyright-text">Copyright © Califa Mountain Festival</p>
-            </div>
-        </div>
     </footer>
     <!--
 
