--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@
                         <a href="https://www.mercadovictoria.com/" target="_blank"><img src="./images/mercadovictoria-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-3">
+                        <a href="https://www.ptvtelecom.com/" target="_blank"><img src="./images/PTV_blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
                         <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                 </div>
