--- a/quedadabrooks.html
+++ b/quedadabrooks.html
@@ -207,13 +207,16 @@
                 </div>
                 <div class="row">
                     <div class="col-3">
-                        <div class="col-3">
-                            <a href="https://saile.es/" target="_blank"><img src="./images/saile-logo-blanco.png" style="width:100%; height: auto" /></a>
-                        </div>
-                        <div class="col-3">
-                            <a href="https://iberoturf.com/" target="_blank"><img src="./images/iberoturf-logo-blanco.png" style="width:100%; height: auto" /></a>
-                        </div>
+                        <a href="https://saile.es/" target="_blank"><img src="./images/saile-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://iberoturf.com/" target="_blank"><img src="./images/iberoturf-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
                         <a href="https://www.mercadovictoria.com/" target="_blank"><img src="./images/mercadovictoria-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.ptvtelecom.com/" target="_blank"><img src="./images/PTV_blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-3">
                         <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
