--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title text-blue-custom">Entrevista</h5>
                                         <p class="text-white">Califa Mountain Festival 4 - Entrevista PTV Córdoba Zona Deporte 21/05/2025</p>
-                                        <iframe class="iframe-custom" src="https://youtu.be/nzVk4GKfQko" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                        <iframe class="iframe-custom" src="https://www.youtube.com/embed/nzVk4GKfQko" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
