--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
                 </div>
             </div>
         </nav>
-        <!--
 
-        <section class="hero-section" id="2024">
+        <section class="hero-section" id="2025">
             <div class="section-overlay"></div>
 
             <div class="container d-flex justify-content-center align-items-center">
@@ -110,17 +109,14 @@
 
                     <div class="col-12 mt-auto mb-5 text-center">
                         <img src="./images/califamountainfestival-logo-color-150Ancho.png" alt="Califa Mountain Festival" />
-                        <h3 class="text-white mb-5">Campeonato de Andalucía de CxM por Etapas 2024 | Trofeo UCO</h3>
-
-                        <a class="btn custom-btn smoothscroll" href="2024" target="_blank">INFORMACIÓN</a>
-                        <a class="btn custom-btn smoothscroll" href="2024#inscripciones" target="_blank">INSCRIPCIONES</a>
+                        <h3 class="text-white mb-5">4 Califa Mountain Festival</h3>
                     </div>
 
                     <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
                         <div class="date-wrap">
                             <h5 class="text-white">
                                 <i class="custom-icon bi-clock me-2"></i>
-                                20 - 22 SEP 2024
+                                19 20 21 SEP 2025
                             </h5>
                         </div>
 
@@ -159,12 +155,11 @@
 
             <div class="video-wrap">
                 <video autoplay="" loop="" muted="" class="custom-video" poster="">
-                    <source src="video/intro.mp4" type="video/mp4">
+                    <source src="video/intro2025_6.mp4" type="video/mp4">
                     Tu navegador no acepta la reproducción de video MP4 HTML5
                 </video>
             </div>
         </section>
-            -->
 
         <section class="about-section section-padding blue-custom-bg" id="ediciones-anteriores">
             <div class="container">
