--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
                     </li>
 
                     <li class="social-icon-item">
+                        <a href="whatsapp" target="_blank" class="social-icon-link">
+                            <span class="bi-whatsapp"></span>
+                        </a>
+                    </li>
+
+                    <li class="social-icon-item">
                         <a href="https://www.youtube.com/@runningseries" target="_blank" class="social-icon-link">
                             <span class="bi-youtube"></span>
                         </a>
@@ -139,6 +145,12 @@
                                 <li class="social-icon-item">
                                     <a href="https://www.instagram.com/califa_mountain_festival" target="_blank" class="social-icon-link">
                                         <span class="bi-instagram"></span>
+                                    </a>
+                                </li>
+
+                                <li class="social-icon-item">
+                                    <a href="whatsapp" target="_blank" class="social-icon-link">
+                                        <span class="bi-whatsapp"></span>
                                     </a>
                                 </li>
 
