--- a/voluntarios.html
+++ b/voluntarios.html
@@ -64,6 +64,12 @@
                     </li>
 
                     <li class="social-icon-item">
+                        <a href="whatsapp" target="_blank" class="social-icon-link">
+                            <span class="bi-whatsapp"></span>
+                        </a>
+                    </li>
+
+                    <li class="social-icon-item">
                         <a href="https://www.youtube.com/@runningseries" target="_blank" class="social-icon-link">
                             <span class="bi-youtube"></span>
                         </a>
@@ -78,7 +84,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll text-yellow-dark-custom" href="2024">Edición 2024</a>
+                            <a class="nav-link click-scroll" href="2025">Edición 2025</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link click-scroll" href="2024">Edición 2024</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="2023">Edición 2023</a>
