--- a/whatsapp.html
+++ b/whatsapp.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Maraton Subbetico Mozarabe">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <meta property="og:image" content="https://califamountainfestival.com/2025/logo.png">
+    <meta property="og:image" content="https://califamountainfestival.com/2025/whatsapp-cover.png">
     <meta property="og:title" content="WhatsApp 4 Califa Mountain Festival" />
     <title>WhatsApp 4 Califa Mountain Festival</title>
     <link rel="icon" href="assets/favicon.ico">
