--- a/index.html
+++ b/index.html
@@ -114,21 +114,20 @@
                 <div class="row">
 
                     <div class="col-12 mt-auto mb-5 text-center">
-                        <img src="./images/califamountainfestival-logo-color-150Ancho.png" alt="Califa Mountain Festival" />
-                        <h3 class="text-white mb-5">4 Califa Mountain Festival</h3>
+                        <img src="2025/logo-2025-light.png" alt="Califa Mountain Festival" />
                     </div>
 
                     <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
                         <div class="date-wrap">
                             <h5 class="text-white">
-                                <i class="custom-icon bi-clock me-2"></i>
+                                <i class="custom-icon text-white bi-clock me-2"></i>
                                 19 20 21 SEP 2025
                             </h5>
                         </div>
 
                         <div class="location-wrap mx-auto py-3 py-lg-0">
                             <h5 class="text-white">
-                                <i class="custom-icon bi-geo-alt me-2"></i>
+                                <i class="custom-icon text-white bi-geo-alt me-2"></i>
                                 Cerro Muriano, Córdoba
                             </h5>
                         </div>
@@ -173,17 +172,73 @@
             </div>
         </section>
 
-        <section class="about-section section-padding blue-custom-bg" id="ediciones-anteriores">
+        <section class="about-section section-padding blue-custom-bg" id="inscripciones-2025">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-12">
+                    <div class="col-lg-12 col-12">
+                        <div class="card margin-bottom-20px red-custom-bg border-none">
+                            <div class="card-body">
+                                <h5 class="card-title text-blue-custom">APERTURA INSCRIPCIONES CxM 1 DE JUNIO</h5>
+                                <h6 class="card-title text-white">Apúntate a las 3 Etapas en INDIVIDUAL, PAREJA O POR RELEVOSx3 (1 ETAPA CADA PARTICIPANTE DEL EQUIPO)</h6>
+                                <h6 class="card-title text-white">También es posible apuntarse por separado en cualquiera de las etapas</h6>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+                                    <a href="https://www.deporticket.com/web-evento/11431-califa-mountain-festival" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">INSCRÍBETE AQUI</a>
+                                    <a href="reglamento" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">REGLAMENTO CxM</a>
+
+                                </div>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">3 ETAPAS</h5>
+                                    <h6 class="card-title text-white">3-Etapas Individual</h6>
+                                    <h6 class="card-title text-white">3-Etapas Individual Base (15-20 años). El sábado harán la prueba corta.</h6>
+                                    <h6 class="card-title text-white">3-Etapas Parejas (siempre juntas de inicio a fin en cada etapa)</h6>
+                                    <h6 class="card-title text-white">3-Etapas por Relevos de 3. Cada participante hace 1 etapa</h6>
+                                </div>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">ETAPA 1 VIERNES CxM NOCTURNA</h5>
+                                    <h6 class="card-title text-white">CxM NOCTURNA (14k 700+/700-) FRONTAL OBLIGATORIO</h6>
+                                </div>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">ETAPA 2 SÁBADO CxM</h5>
+                                    <h6 class="card-title text-white">CxM LARGA (27K 1000+/1000-) Puntuable Copa CxM Córdoba Larga y 20K UTMB Index</h6>
+                                    <h6 class="card-title text-white">CxM CORTA (9-12K 400+-600+) Puntuable Copa CxM Córdoba Corta y Trofeo UCO CxM</h6>
+                                </div>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">ETAPA 3 DOMINGO CxM CONTRARRELOJ</h5>
+                                    <h6 class="card-title text-white">CxM CONTRARRELOJ (12K 700+/700-) Salidas individuales en sentido inverso a la clasificación provisional. Los que solo hacen esta prueba, irá en sentido de número de dorsal.</h6>
+                                </div>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">APERTURA INSCRIPCIONES SENDERISMO | INFANTIL | ACTIVIDADES</h5>
+                                    <a class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">PRÓXIMAMENTE INSCRIPCIONES OTRAS ACTIVIDADES</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-12">
                         <div class="card margin-bottom-20px blue-custom-bg border-none">
                             <div class="card-body">
                                 <h5 class="card-title text-red-custom">2025. VUELVE CALIFA MOUNTAIN FESTIVAL</h5>
                                 <a><img class="artists-image" src="2025/cartel-califamountainfestival-25-web.png" /></a>
                             </div>
+                            <div class="card-body">
+                                <a href="https://www.deporticket.com/web-evento/11431-califa-mountain-festival" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">INSCRÍBETE AQUI</a>
+                                <a href="reglamento" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">REGLAMENTO CxM</a>
+
+                            </div>
                         </div>
                     </div>
+
                 </div>
 
                 <!-- VIDEOS -->
