--- a/index.html
+++ b/index.html
@@ -179,8 +179,11 @@
                         <div class="card margin-bottom-20px red-custom-bg border-none">
                             <div class="card-body">
                                 <h5 class="card-title text-blue-custom">APERTURA INSCRIPCIONES CxM 1 DE JUNIO</h5>
+
                                 <h6 class="card-title text-white">Apúntate a las 3 Etapas en INDIVIDUAL, PAREJA O POR RELEVOSx3 (1 ETAPA CADA PARTICIPANTE DEL EQUIPO)</h6>
                                 <h6 class="card-title text-white">También es posible apuntarse por separado en cualquiera de las etapas</h6>
+                                <a><img class="artists-image" src="2025/inscripciones.png" /></a>
+
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
