--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@
 
                                 <h6 class="card-title text-white">Apúntate a las 3 Etapas en INDIVIDUAL, PAREJA O POR RELEVOSx3 (1 ETAPA CADA PARTICIPANTE DEL EQUIPO)</h6>
                                 <h6 class="card-title text-white">También es posible apuntarse por separado en cualquiera de las etapas</h6>
+                                <h6 class="card-title text-white">ESTE AÑO NO HAY OPCIÓN DE ALBERGUE AL ENCONTRARSE EN OBRAS.</h6>
+
                                 <a><img class="artists-image" src="2025/inscripciones.png" /></a>
 
                             </div>
