--- a/voluntarios.html
+++ b/voluntarios.html
@@ -179,75 +179,106 @@
     <footer class="site-footer blue-custom-bg">
         <div class="container">
 
-            <div class="row">
+            <div class="container">
 
-                <div class="col-12">
-                    <h2 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores Principales 2025</h2>
+                <div class="row">
+
+                    <div class="col-12">
+                        <h2 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores Principales 2025</h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <a href="https://www.spg-pack.com/" target="_blank"><img src="./images/spg-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-4">
+                            <a href="https://studio128k.com/" target="_blank"><img src="./images/logo_128k_blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-4">
+                            <a href="https://superatesports.es/" target="_blank"><img src="./images/superate-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="mb-lg-0 text-yellow-dark-custom">Partners Institucionales 2025</h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-3">
+                            <a href="https://www.imdcordoba.es/" target="_blank"><img src="./images/imdeco-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://dipucordoba.es" target="_blank"><img src="./images/diputacion-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://obejo.es/" target="_blank"><img src="./images/obejo-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://www.uco.es/" target="_blank"><img src="./images/uco-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://www.uco.es/empresa/ucodeporte/" target="_blank"><img src="./images/ucodeporte-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://fadmes.es/" target="_blank"><img src="./images/fadmes-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://andalusiancrush.org?utm_source=cdrunningseries&utm_medium=web&utm_campaign=patrociniocalifamountainfestival2024&utm_content=logotipoweb" target="_blank"><img src="./images/junta-logo-blanco.png" style="width:100%; height: auto" /><img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361136&" width="1" height="1"><img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361136&" width="1" height="1"></a>
+                        </div>
+                        <div class="col-2">
+                            <a href="https://www.ajeandalucia.org/cordoba/" target="_blank"><img src="./images/aje-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores 2025</h3>
+                    </div>
+                    <div class="row">
+                        <div class="col-3">
+                            <a href="https://saile.es/" target="_blank"><img src="./images/saile-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://iberoturf.com/" target="_blank"><img src="./images/iberoturf-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://www.mercadovictoria.com/" target="_blank"><img src="./images/mercadovictoria-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://www.tysa.es/" target="_blank"><img src="./images/tysa-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://www.sanalemo.es/" target="_blank"><img src="./images/sanalemo-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://www.facebook.com/casasruralescordoba" target="_blank"><img src="./images/carusihome-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-4">
-                        <a href="https://www.spg-pack.com/" target="_blank"><img src="./images/spg-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    <div class="col-12">
+                        <h3 class="mb-lg-0 text-yellow-dark-custom">Colaboradores 2025</h3>
                     </div>
-                    <div class="col-4">
-                        <a href="https://studio128k.com/" target="_blank"><img src="./images/logo_128k_blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-4">
-                        <a href="https://superatesports.es/" target="_blank"><img src="./images/superate-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="mb-lg-0 text-yellow-dark-custom">Partners Institucionales 2025</h2>
-                </div>
-                <div class="row">
-                    <div class="col-3">
-                        <a href="https://www.imdcordoba.es/" target="_blank"><img src="./images/imdeco-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://dipucordoba.es" target="_blank"><img src="./images/diputacion-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://obejo.es/" target="_blank"><img src="./images/obejo-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://www.uco.es/" target="_blank"><img src="./images/uco-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://www.uco.es/empresa/ucodeporte/" target="_blank"><img src="./images/ucodeporte-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://fadmes.es/" target="_blank"><img src="./images/fadmes-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://andalusiancrush.org?utm_source=cdrunningseries&utm_medium=web&utm_campaign=patrociniocalifamountainfestival2024&utm_content=logotipoweb" target="_blank"><img src="./images/junta-logo-blanco.png" style="width:100%; height: auto" /><img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361136&" width="1" height="1"><img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361136&" width="1" height="1"></a>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://www.ajeandalucia.org/cordoba/" target="_blank"><img src="./images/aje-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <h3 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores 2025</h3>
-                </div>
-                <div class="row">
-                    <div class="col-3">
-                        <a href="https://saile.es/" target="_blank"><img src="./images/saile-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://iberoturf.com/" target="_blank"><img src="./images/iberoturf-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://www.mercadovictoria.com/" target="_blank"><img src="./images/mercadovictoria-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://www.ptvtelecom.com/" target="_blank"><img src="./images/PTV_blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    <div class="row">
+                        <div class="col-2">
+                            <a href="https://golfcordoba.com/" target="_blank"><img src="./images/golf-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-2">
+                            <a href="https://www.ptvtelecom.com/" target="_blank"><img src="./images/PTV_blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-2">
+                            <a href="https://hotelabadi.com/" target="_blank"><img src="./images/abadi-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-2">
+                            <a href="https://www.facebook.com/profile.php?id=100072771710690" target="_blank"><img src="./images/rialto-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-2">
+                            <a href="https://www.facebook.com/restaurantebarequis" target="_blank"><img src="./images/equis-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
                     </div>
                 </div>
             </div>
