--- a/defaultsite.html
+++ b/defaultsite.html
@@ -24,7 +24,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <!-- Title -->
-    <title>III Califa MountainFestival 2024</title>
+    <title>Califa MountainFestival</title>
 
     <!-- Favicon -->
     <link rel="icon" href="assets/favicon.ico">
