--- a/ponencias.html
+++ b/ponencias.html
@@ -3,7 +3,7 @@
 
 <head>
     <img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361135&" width="1" height="1">
-    <meta http-equiv="refresh" content="0; url=https://www.deporticket.com/web-formulario/27721-inscripcion-charlas-ponencias" />
+    <meta http-equiv="refresh" content="0; url=index" />
 
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <!-- Title -->
-    <title>Inscripciones III Califa MountainFestival 2024</title>
+    <title>Califa MountainFestival</title>
 
     <!-- Favicon -->
     <link rel="icon" href="assets/favicon.ico">
