--- a/2022.html
+++ b/2022.html
@@ -456,6 +456,9 @@
                     <div class="col-2">
                         <a href="https://wininnovacion.com/" target="_blank"><img src="./images/wininnovacion-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
+                    <div class="col-2">
+                        <a href="https://www.ruizre.es/" target="_blank"><img src="./images/ruizre-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
                 </div>
             </div>
         </div>
