--- a/quedadabrooks.html
+++ b/quedadabrooks.html
@@ -259,6 +259,9 @@
                         <a href="https://www.facebook.com/restaurantebarequis" target="_blank"><img src="./images/equis-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
+                        <a href="https://canoliva.com/" target="_blank"><img src="./images/canoliva-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                         <a href="https://wininnovacion.com/" target="_blank"><img src="./images/wininnovacion-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
