--- a/index.html
+++ b/index.html
@@ -178,20 +178,21 @@
                     <div class="col-lg-12 col-12">
                         <div class="card margin-bottom-20px red-custom-bg border-none">
                             <div class="card-body">
-                                <h5 class="card-title text-blue-custom">APERTURA INSCRIPCIONES CxM 1 DE JUNIO</h5>
+                                <h5 class="card-title text-blue-custom">INSCRIPCIONES ABIERTAS (CxM + SENDERISMO)</h5>
+                                <h6 class="card-title text-white">Las inscripciones no incluyen prenda conmemorativa, tanto la camiseta como el cortavientos pueden adquirise si se desea en una de las secciones de la inscripción</h6>
 
                                 <h6 class="card-title text-white">Apúntate a las 3 Etapas en INDIVIDUAL, PAREJA O POR RELEVOSx3 (1 ETAPA CADA PARTICIPANTE DEL EQUIPO)</h6>
                                 <h6 class="card-title text-white">También es posible apuntarse por separado en cualquiera de las etapas</h6>
                                 <h6 class="card-title text-white">ESTE AÑO NO HAY OPCIÓN DE ALBERGUE AL ENCONTRARSE EN OBRAS.</h6>
 
                                 <a><img class="artists-image" src="2025/inscripciones.png" /></a>
+                                <a><img class="artists-image" src="2025/inscripciones-senderismo.png" /></a>
 
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
                                     <a href="https://www.deporticket.com/web-evento/11431-califa-mountain-festival" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">INSCRÍBETE AQUI</a>
-                                    <a href="reglamento" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">REGLAMENTO CxM</a>
-
+                                    <a href="reglamento" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">REGLAMENTO</a>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
@@ -220,6 +221,12 @@
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">ETAPA 3 DOMINGO CxM CONTRARRELOJ</h5>
                                     <h6 class="card-title text-white">CxM CONTRARRELOJ (12K 700+/700-) Salidas individuales en sentido inverso a la clasificación provisional. Los que solo hacen esta prueba, irá en sentido de número de dorsal.</h6>
+                                </div>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">SENDERISMO - SÁBADO 20 DE SEPTIEMBRE</h5>
+                                    <h6 class="card-title text-white">SENDERISMO (10K 350+/350-) Actividad no competitiva</h6>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
