--- a/voluntarios.html
+++ b/voluntarios.html
@@ -277,6 +277,12 @@
                             <a href="https://www.facebook.com/profile.php?id=100072771710690" target="_blank"><img src="./images/rialto-logo-blanco.png" style="width:100%; height: auto" /></a>
                         </div>
                         <div class="col-2">
+                            <a href="https://elictem.com/" target="_blank"><img src="./images/elictem-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-2">
+                            <a href="https://www.facebook.com/p/DobleTrack-100083390556313" target="_blank"><img src="./images/dobletrack-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-2">
                             <a href="https://www.facebook.com/restaurantebarequis" target="_blank"><img src="./images/equis-logo-blanco.png" style="width:100%; height: auto" /></a>
                         </div>
                         <div class="col-2">
