--- a/voluntarios.html
+++ b/voluntarios.html
@@ -280,6 +280,18 @@
                             <a href="https://elictem.com/" target="_blank"><img src="./images/elictem-logo-blanco.png" style="width:100%; height: auto" /></a>
                         </div>
                         <div class="col-2">
+                            <a href="https://ecsaconsultores.com/" target="_blank"><img src="./images/ecsa-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-2">
+                            <a href="https://www.kidsandus.es/" target="_blank"><img src="./images/kidus-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-2">
+                            <a href="https://ecsaconsultores.com/" target="_blank"><img src="./images/ecsa-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-2">
+                            <a href="https://www.kidsandus.es/" target="_blank"><img src="./images/kidus-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
+                        <div class="col-2">
                             <a href="https://www.facebook.com/p/DobleTrack-100083390556313" target="_blank"><img src="./images/dobletrack-logo-blanco.png" style="width:100%; height: auto" /></a>
                         </div>
                         <div class="col-2">
