--- a/blog.html
+++ b/blog.html
@@ -193,6 +193,9 @@
                     <div class="col-4">
                         <a href="https://superatesports.es/" target="_blank"><img src="./images/superate-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
+                    <div class="col-4">
+                        <a href="https://www.innovaocular.com/" target="_blank"><img src="./images/innovaocular-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
                 </div>
             </div>
 
